pgadmin4/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4-deployment
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:4
          ports:
            - containerPort: 80
              # hostPort: 5050
