pgadmin4/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-service
  labels:
    app: pgadmin4
spec:
  type: NodePort
  selector:
    app: pgadmin4
  ports:
  - protocol: TCP
    nodePort: 30000
    port: 80
    targetPort: 80
  selector:
    app: pgadmin4
