pgadmin4/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
          # - host: "pg.admin.com"
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadmin4-service
            port:
              number: 80
